# pici

./: .gitignore  CONTRIBUTORS.txt  README.md  TECHDEBT.md  TODO.txt  notes.txt  setup-nfs.sh  setup.md  setup.txt  setup2.sh
ansible/: site.yml
ansible/inventory/: hosts
ansible/roles/site/files/: pyproject.toml
ansible/roles/site/files/nginx/: certbot.sh  fpgas.online.conf
ansible/roles/site/files/pib/: Makefile  manage.py  requirements.txt
ansible/roles/site/files/pib/pib/: asgi.py  settings.py  urls.py  wsgi.py
ansible/roles/site/files/pib/pibdemos/: README.md  pyproject.toml
ansible/roles/site/files/pib/pibdemos/nginx/: pibdemos.conf
ansible/roles/site/files/pib/pibdemos/src/pibdemos/: urls.py  utils.py  views.py
ansible/roles/site/files/pib/pibfpgas/: LICENSE  pyproject.toml
ansible/roles/site/files/pib/pibfpgas/Demos/counter_test/: run_demo.sh  top.bit
ansible/roles/site/files/pib/pibfpgas/Demos/kianv1/: demo.sh  sit.sh
ansible/roles/site/files/pib/pibfpgas/Demos/linux_litex/: run_demo.sh  top.bit
ansible/roles/site/files/pib/pibfpgas/Demos/micro_python/: run_demo.sh
ansible/roles/site/files/pib/pibfpgas/Demos/tt910/: sit.sh
ansible/roles/site/files/pib/pibfpgas/fixtures/: create_json.py  fpgas.online.json  k207.fpgas.online.json  output.csv  ps1.fpgas.online.json
ansible/roles/site/files/pib/pibfpgas/nginx/: pibfpgas.conf
ansible/roles/site/files/pib/pibfpgas/src/pibfpgas/: admin.py  models.py  urls.py  views.py
ansible/roles/site/files/pib/pibfpgas/src/pibfpgas/migrations/: 0001_initial.py  0002_pi_board_type.py
ansible/roles/site/files/pib/pibfpgas/src/pibfpgas/static/: demos.js  pib.css
ansible/roles/site/files/pib/pibfpgas/src/pibfpgas/templates/: base.html  fpga.html  fpga.html.j2  index.html  local_connect.html  preview_tt.html  tt.html
ansible/roles/site/files/pib/pibup/: pyproject.toml
ansible/roles/site/files/pib/pibup/nginx/: pibup.conf
ansible/roles/site/files/pib/pibup/src/pibup/: forms.py  urls.py  views.py
ansible/roles/site/files/pib/pibup/src/pibup/templates/: success.html  upload.html
ansible/roles/site/files/pib/pistat/: consumers.py  pyproject.toml  send.py  urls.py
ansible/roles/site/files/pib/pistat/nginx/: pistat.conf
ansible/roles/site/files/pib/pistat/scripts/: send.py  send_ncc.py  send_serial.py  send_stat.conf  send_stat.py
ansible/roles/site/files/pib/pistat/src/pistat/: consumers.py  ping.py  ping2.py  routing.py  send.py  urls.py  views.py
ansible/roles/site/files/pib/pistat/src/pistat/static/: dcws.js
ansible/roles/site/files/pib/pistat/static/: pistat.html
ansible/roles/site/files/pib/snmp_switch/: pyproject.toml  utils.py  views.py
ansible/roles/site/files/pib/snmp_switch/nginx/: snmp_switch.conf
ansible/roles/site/files/pib/snmp_switch/scripts/: allpoe.sh  allpoeoff.sh  poe.sh
ansible/roles/site/files/pib/snmp_switch/src/snmp_switch/: urls.py  utils.py  views.py
ansible/roles/site/files/src/pib/snmp_switch/: urls.py
archive/files/: uppi1.sh  uppi2.sh
files/: 30autoproxy  cmdline.txt  exports  fstab  issue  keyboard
files/netgear/: poe.sh
files/pxe/: exports  fstab  rpi.conf  ufw.sh
files/rpi/: 30autoproxy  cam.sh  cmdline.txt  config.txt  fstab  issue  password.conf  setup3.sh  show_info.sh  sysconf.txt  user-data
files/scripts/: burn.sh  maintenance.sh  mktftpln.sh  normal.sh  off.sh  reup.sh  rm_play.sh  updates_on.sh  zap.sh
temp/: 40_custom  mknfs.sh  mkpisrv.sh  overlayroot.conf  test1.sh  test2.sh
tools/: dhcp-logger.py  dhcp-vc.py  log_lookie.py  notes.txt
tools/dhcp/: dhcp-vc.py
tools/mkpisd/: ddsd.sh  fixit.sh
tools/pinet/: chroot.conf  cmdline.txt  config.txt  fstab  nbpi.sh  nbpi.tj.sh  user-data  userconf.txt
tools/qemu/: chroot-mount-nfs.bash  (+1 more)
update_pi4/: bootconf.txt  config.txt  mksd.sh  notes.txt
(+255 files in other folders)
