[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pib"
version = "0.0.2"
authors = [
  { name="aCarl", email="carl@NextDayVideo.com" },
]
description = "Turn it off and on again"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CarlFK/pib"
"Bug Tracker" = "https://github.com/CarlFK/pib/issues"
