[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pibup"
version = "0.0.1"
authors = [
  { name="Carl Karsten", email="carl@NextDayVideo.com" },
]
description = "Upload a bitstream to pi/Uploads"
readme = "README.md"
# requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    'paramiko',
    'django',
]

[project.optional-dependencies]
cli = [
]
[project.urls]
Repository =  "https://github.com/CarlFK/pib"
