[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pistat"
version = "0.0.2"
authors = [
  { name="Carl Karsten", email="carl@NextDayVideo.com" },
]
description = "Is the Pi onchannels[daphne] or what?"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=['channels[daphne]', 'channels_redis', 'django']

[project.urls]
Repository =  "https://github.com/CarlFK/pib"
