[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snmp_switch"
version = "0.0.10"
authors = [
  { name="Roman M.", email="roman@typethink.com" },
  { name="Carl Karsten", email="carl@NextDayVideo.com" },
]
description = "Turn it off and on again"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=['pysnmplib', 'django']

[project.urls]
Repository =  "https://github.com/CarlFK/pib"
